[package]
name = "tutorial1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
plotters = { git = "https://github.com/38/plotters", default_features = false, features = ["evcxr"] }
petgraph-evcxr = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.66"