[package]
name = "tutorial1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.7.1"
plotters = { git = "https://github.com/38/plotters", default-features = false, features = ["evcxr","bitmap_backend"] }
petgraph-evcxr = "0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.66"
proc-macro2 = "1.0.93"
rand = "0.8"
csv = "1.3.1"
